<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">LoginCounter</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world"></string>
    <string name="user">username</string>
    <string name="password">password</string>
    <string name="add_button">Add</string>
    <string name="login_button">Login</string>
    <string name="logout_button">Logout</string>
    <string name="title_activity_login_message">LoginMessageActivity</string>

</resources>
