<?xml version="1.0" encoding="UTF-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
	android:layout_height="match_parent" android:paddingBottom="@dimen/activity_vertical_margin"
	android:paddingLeft="@dimen/activity_horizontal_margin"
	android:paddingRight="@dimen/activity_horizontal_margin"
	android:paddingTop="@dimen/activity_vertical_margin" tools:context=".LoginAddActivity">

	<TextView android:id="@+id/result_message"
		android:layout_width="wrap_content" android:layout_height="wrap_content"
		android:text="@string/hello_world" />
	
		<EditText android:id="@+id/user" android:layout_width="wrap_content"
		android:layout_height="wrap_content" android:layout_alignLeft="@+id/password"
		android:layout_below="@+id/result_message" android:layout_marginTop="18dp"
		android:ems="10" android:hint="@string/user" />
		
	<EditText android:id="@+id/password" android:layout_width="wrap_content"
		android:layout_height="wrap_content" android:layout_alignLeft="@+id/result_message"
		android:layout_below="@+id/result_message" android:layout_marginTop="55dp"
		android:ems="10" android:inputType="textWebPassword" android:hint="@string/password" />

	<Button android:id="@+id/button1" android:layout_width="wrap_content"
		android:layout_height="wrap_content" android:layout_below="@+id/password"
		android:layout_centerHorizontal="true" android:onClick="sendAddRequest"
		android:text="@string/add_button" />

	
	<Button android:id="@+id/button2" android:layout_width="wrap_content"
		android:layout_height="wrap_content" android:layout_alignLeft="@+id/button1"
		android:layout_below="@+id/button1"
		android:text="@string/login_button" android:onClick="sendLoginRequest" />

</RelativeLayout>